# License-Plate-Recognition-Backend

./: .gitattributes  Dockerfile  README.md  docker-compose.yaml  functions.py  main.py  pyproject.toml
