[tool.poetry]
name = "yolo"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
numpy = "^2.1.2"
opencv-python = "^4.10.0.84"
torch = "^2.5.0"
torchvision = "^0.20.0"
pytesseract = "^0.3.13"
imutils = "^0.5.4"
tesseract = "^0.1.3"
tesserocr = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
